# Centaurea

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/common/: CMakeLists.txt  game.cpp  game.h
src/common/cmake/: FindGLM.cmake
src/common/game/: CMakeLists.txt  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GlGraphicComponentFactory.cpp  GlGraphicComponentFactory.h  IDisposable.h  IGameScene.h  IGraphicComponent.h  IGraphicComponentFactory.h  ITextureLoader.h  ReflectionGlGraphicComponent.cpp  ReflectionGlGraphicComponent.h  TransformModel.h  game.cpp  game.h  glGame.h  glwrapper.h
src/common/gameengine/: CMakeLists.txt  Camera.h  Game.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GlGame.h  GlHelper.h  IGameObject.h  IGraphicComponent.h  IGraphicComponentFactory.h  ReflectionGlGraphicComponent.cpp  ReflectionGlGraphicComponent.h  Screen.h  TransformModel.h  game.cpp
src/droid/: .gitignore  settings.gradle
src/droid/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
src/droid/app/src/androidTest/java/centaureaproj/com/centaurea/: ExampleInstrumentedTest.java
src/droid/app/src/main/: AndroidManifest.xml
src/droid/app/src/main/cpp/: native-lib.cpp
src/droid/app/src/main/cpp/jni/: centaureaproj_com_centaurea_GameLibJNIWrapper.cpp  centaureaproj_com_centaurea_GameLibJNIWrapper.h
src/droid/app/src/main/cpp/textures/: AndroidTextureLoader.cpp  AndroidTextureLoader.h
src/droid/app/src/main/java/centaureaproj/com/centaurea/: GameLibJNIWrapper.java  MainActivity.java  RendererWrapper.java
src/droid/app/src/main/res/layout/: activity_main.xml
src/droid/app/src/main/res/values/: strings.xml
src/droid/app/src/test/java/centaureaproj/com/centaurea/: ExampleUnitTest.java
src/droid/gradle/wrapper/: gradle-wrapper.properties
src/ios/: CMakeLists.txt
src/ios/centaurea/: AppDelegate.h  AppDelegate.mm  Info.plist  IosTextureLoader.cpp  IosTextureLoader.hpp  ViewController.h  ViewController.m  ViewController.mm  glwrapper.h  main.mm
src/ios/centaurea.xcodeproj/: project.pbxproj
src/ios/centaurea.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/ios/centaurea.xcodeproj/project.xcworkspace/xcuserdata/vadzimv.xcuserdatad/: UserInterfaceState.xcuserstate
src/ios/centaurea.xcodeproj/xcuserdata/vadzimv.xcuserdatad/xcschemes/: xcschememanagement.plist
